--- a/cgogn/ui/CMakeLists.txt
+++ b/cgogn/ui/CMakeLists.txt
@@ -41,7 +41,8 @@ target_sources(${PROJECT_NAME}
 		"${CMAKE_CURRENT_LIST_DIR}/modules/topo_render/topo_render.h"
 		"${CMAKE_CURRENT_LIST_DIR}/modules/surface_modeling/surface_modeling.h"
 		"${CMAKE_CURRENT_LIST_DIR}/modules/surf_render/surf_render.h"
-#		"${CMAKE_CURRENT_LIST_DIR}/modules/volume_selection/volume_selection.h"
+		"${CMAKE_CURRENT_LIST_DIR}/modules/volume_selection/volume_selection.h"
+		"${CMAKE_CURRENT_LIST_DIR}/modules/volume_mr_modeling/volume_mr_modeling.h"
 )
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
