--- a/cgogn/simulation/examples/CMakeLists.txt
+++ b/cgogn/simulation/examples/CMakeLists.txt
@@ -22,10 +22,25 @@ target_link_libraries(shallow_water
 	${CMAKE_DL_LIBS}
 )
 
+add_executable(shape_matching shape_matching.cpp)
+target_link_libraries(shape_matching
+	cgogn::core
+	cgogn::ui
+	cgogn::io
+	cgogn::rendering
+	cgogn::simulation
+	${CMAKE_DL_LIBS}
+)
+
+
 if(APPLE)
 	find_library(CORE_FOUNDATION CoreFoundation)
 	find_library(CARBON Carbon)
 	target_link_libraries(shallow_water
+		${CORE_FOUNDATION}
+		${CARBON}
+	)
+	target_link_libraries(shape_matching
 		${CORE_FOUNDATION}
 		${CARBON}
 	)
