--- a/cgogn/simulation/CMakeLists.txt
+++ b/cgogn/simulation/CMakeLists.txt
@@ -20,6 +20,7 @@ target_sources(${PROJECT_NAME}
         "${CMAKE_CURRENT_LIST_DIR}/algos/shape_matching/shape_matching.cpp"
 	"${CMAKE_CURRENT_LIST_DIR}/algos/multiresolution_propagation/propagation_forces.h"
 	"${CMAKE_CURRENT_LIST_DIR}/algos/multiresolution_propagation/propagation_spring.h"
+	"${CMAKE_CURRENT_LIST_DIR}/algos/multiresolution_propagation/propagation_plastique.h"
 	"${CMAKE_CURRENT_LIST_DIR}/algos/multiresolution_propagation/propagation_constraint.h"
 	"${CMAKE_CURRENT_LIST_DIR}/algos/Simulation_constraint.h"
 	"${CMAKE_CURRENT_LIST_DIR}/algos/Simulation_solver.h"
