--- a/cgogn/core/CMakeLists.txt
+++ b/cgogn/core/CMakeLists.txt
@@ -36,8 +36,14 @@ target_sources(${PROJECT_NAME}
 		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/cph3.h"
 		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/cph3_adaptative.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/cph3_adaptative.h"
-		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/explicit_MR.cpp"
-		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/explicit_MR.h"
+		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/EMR_Map3.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/EMR_Map3.h"
+		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/EMR_Map2.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/EMR_Map2.h"
+		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/EMR_Map1.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/EMR_Map1.h"
+		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/EMR_MapBase.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/EMR_MapBase.h"
 		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/dart_marker.h"
 		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/dart.h"
 		"${CMAKE_CURRENT_LIST_DIR}/types/cmap/graph.h"
