--- a/cgogn/modeling/examples/CMakeLists.txt
+++ b/cgogn/modeling/examples/CMakeLists.txt
@@ -52,6 +52,16 @@ target_link_libraries(mr_volume
 	${CMAKE_DL_LIBS}
 )
 
+add_executable(emr_volume emr_volume.cpp)
+target_link_libraries(emr_volume
+	cgogn::core
+	cgogn::ui
+	cgogn::io
+	cgogn::rendering
+	cgogn::modeling
+	${CMAKE_DL_LIBS}
+)
+
 if(APPLE)
 	find_library(CORE_FOUNDATION CoreFoundation)
 	find_library(CARBON Carbon)
